[FIX] web: solve the field length issue in preview template
in template preview, the length of 'IAP Account Field'
should be enough to display the value, in actual it is
too short.
this commit will fix this issue by adding min-width to
the class ".o_field_many2one_selection" it will
display the field properly without any length issues.

task-id: 2453138

--- a/addons/web/static/src/scss/fields.scss
+++ b/addons/web/static/src/scss/fields.scss
@@ -93,7 +93,7 @@
 
         .o_field_many2one_selection {
             display: flex;
-            width: 100%;
+            min-width: 100%;
         }
 
         .o_external_button {
